--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
 <img src="docker.png">
 <img src="docker.png">
 <img src="docker.png">
-<img src="docker.png">
+<h2> I am a docker and I like to swim </h2>
