--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <img src="docker.png">
 <img src="docker.png">
 <img src="docker.png">
-<marquee> I am swimming... Yipee... </marquee>
+<marquee><b> I am swimming... Yipee... </b></marquee>
 <img src="docker.png">
 <img src="docker.png">
 <img src="docker.png">
-<h2> I am a docker and I like to swim </h2>
+<center><h2> I am a docker and I like to swim </h2></center>
